--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body, html {
   }
   
 body {
-    background-image: linear-gradient(45deg, #1b3c33, #195156);
+    background-image: linear-gradient(45deg, #5de5c1, #10919d);
     
 }
 
